# py-tree-sitter-talon

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .stubtest-allowlist.py310.csv  .stubtest-allowlist.py311.csv  .stubtest-allowlist.py312.csv  .stubtest-allowlist.py37.csv  .stubtest-allowlist.py38.csv  .stubtest-allowlist.py39.csv  .stubtest-allowlist.python3.10.csv  .stubtest-allowlist.python3.11.csv  .stubtest-allowlist.python3.7.1.csv  CHANGELOG.md  MANIFEST.in  Makefile  README.md  build.py  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  version.py
.github/actions/setup-python/: action.yml
.github/workflows/: build-doc.yml  build-docs.yml  build-sdist.yml  build-wheel.yml  build.yml  ci.yml  cibuildwheel.yml  docs.yml  publish.yml  release.yml  sdist.yml  sphinx.yml  test.yml  tox.yml
_sources/: index.rst.txt
_static/: documentation_options.js
doc-source/: conf.py
docs/: conf.py  index.rst
src/tree_sitter_talon/: __init__.py  _version.py
src/tree_sitter_talon/_internal/: __init__.py  binding.c  core.py  dynamic.py  dynamic.pyi  match.py
src/tree_sitter_talon/internal/: dynamic.pyi
stubs/tree_sitter/: __init__.pyi  binding.pyi
test/: api.yml  talon_api.yml  test_api.py  test_from_tree_sitter.py  test_golden.py
test/golden/: knausj_talon_apps_1password_1password.yml  knausj_talon_apps_1password_1password_global.yml  knausj_talon_apps_adobe_adobe_acrobat_reader_dc.yml  knausj_talon_apps_amethyst_amethyst.yml  knausj_talon_apps_anaconda_anaconda.yml  knausj_talon_apps_calibre_calibre_viewer.yml  knausj_talon_apps_conemu.yml  knausj_talon_apps_discord_discord.yml  knausj_talon_apps_eclipse_eclipse.yml  knausj_talon_apps_evernote_mac.yml  knausj_talon_apps_file_manager.yml  knausj_talon_apps_firefox_firefox.yml  knausj_talon_apps_gdb_gdb.yml  knausj_talon_apps_generic_browser.yml  knausj_talon_apps_generic_debugger.yml  knausj_talon_apps_generic_snippets_generic_snippets.yml  knausj_talon_apps_generic_snippets_generic_snippets_open.yml  knausj_talon_apps_generic_terminal_generic_terminal.yml  knausj_talon_apps_i3wm_i3wm.yml  knausj_talon_apps_jetbrains_jetbrains.yml  knausj_talon_apps_kindle_kindle.yml  knausj_talon_apps_kubectl_kubectl.yml  knausj_talon_apps_okular_okular.yml  knausj_talon_apps_platforms_linux_atril_atril.yml  knausj_talon_apps_platforms_linux_dunst.yml  knausj_talon_apps_platforms_linux_evince_evince.yml  knausj_talon_apps_platforms_linux_gnome-terminal_gnome-terminal.yml  knausj_talon_apps_platforms_linux_kde-konsole_kde-konsole.yml  knausj_talon_apps_platforms_linux_keepassx.yml  knausj_talon_apps_platforms_linux_nautilus_nautilus.yml  knausj_talon_apps_platforms_linux_signal.yml  knausj_talon_apps_platforms_linux_taskwarrior.yml  knausj_talon_apps_platforms_linux_termite.yml  knausj_talon_apps_platforms_linux_tmux.yml  knausj_talon_apps_platforms_mac_finder_finder.yml  knausj_talon_apps_platforms_mac_iterm_iterm.yml  knausj_talon_apps_platforms_mac_notes_notes.yml  knausj_talon_apps_platforms_mac_rstudio.yml  knausj_talon_apps_platforms_mac_terminal_apple_terminal.yml  knausj_talon_apps_platforms_win_explorer_explorer.yml  (+127 more)
tests/: __init__.py  test_api.py  test_golden.py
tests/data/: api.py310.yml  api.py311.yml  api.py37.yml  api.py38.yml  api.yml
tests/data/golden/: knausj_talon_apps_1password_1password.yml  knausj_talon_apps_1password_1password_global.yml  knausj_talon_apps_adobe_adobe_acrobat_reader_dc.yml  knausj_talon_apps_amethyst_amethyst.yml  knausj_talon_apps_anaconda_anaconda.yml  knausj_talon_apps_calibre_calibre_viewer.yml  knausj_talon_apps_conemu.yml  knausj_talon_apps_discord_discord.yml  knausj_talon_apps_eclipse_eclipse.yml  knausj_talon_apps_evernote_mac.yml  knausj_talon_apps_file_manager.yml  knausj_talon_apps_firefox_firefox.yml  knausj_talon_apps_gdb_gdb.yml  knausj_talon_apps_generic_browser.yml  knausj_talon_apps_generic_debugger.yml  knausj_talon_apps_generic_snippets_generic_snippets.yml  knausj_talon_apps_generic_snippets_generic_snippets_open.yml  knausj_talon_apps_generic_terminal_generic_terminal.yml  knausj_talon_apps_i3wm_i3wm.yml  knausj_talon_apps_jetbrains_jetbrains.yml  knausj_talon_apps_kindle_kindle.yml  knausj_talon_apps_kubectl_kubectl.yml  knausj_talon_apps_okular_okular.yml  knausj_talon_apps_platforms_linux_atril_atril.yml  knausj_talon_apps_platforms_linux_dunst.yml  knausj_talon_apps_platforms_linux_evince_evince.yml  knausj_talon_apps_platforms_linux_gnome-terminal_gnome-terminal.yml  knausj_talon_apps_platforms_linux_kde-konsole_kde-konsole.yml  knausj_talon_apps_platforms_linux_keepassx.yml  knausj_talon_apps_platforms_linux_nautilus_nautilus.yml  knausj_talon_apps_platforms_linux_signal.yml  knausj_talon_apps_platforms_linux_taskwarrior.yml  knausj_talon_apps_platforms_linux_termite.yml  knausj_talon_apps_platforms_linux_tmux.yml  knausj_talon_apps_platforms_mac_finder_finder.yml  knausj_talon_apps_platforms_mac_iterm_iterm.yml  knausj_talon_apps_platforms_mac_notes_notes.yml  knausj_talon_apps_platforms_mac_rstudio.yml  knausj_talon_apps_platforms_mac_terminal_apple_terminal.yml  knausj_talon_apps_platforms_win_explorer_explorer.yml  (+127 more)
tree_sitter_talon/: __init__.py  __init__.pyi  ast.py  binding.pyi  compat.py  core.py  dynamic.py  dynamic.pyi  error_as_node.pyi  extra.py  extra.pyi  parsec.py  re.py  types.py  util.py  version.py
tree_sitter_talon/data/: api.yml  tree_sitter_talon-1.1.0-x86_64.dylib
tree_sitter_talon/data/golden/: knausj_talon_apps_adobe_adobe_acrobat_reader_dc.yml  knausj_talon_apps_amethyst_amethyst.yml  knausj_talon_apps_anaconda_anaconda.yml  knausj_talon_apps_conemu.yml  knausj_talon_apps_discord_discord.yml  knausj_talon_apps_file_manager.yml  knausj_talon_apps_gdb_gdb.yml  knausj_talon_apps_generic_terminal_generic_terminal.yml  (+60 more)
tree_sitter_talon/extra/: __pickle_compat.py  reduce.py
tree_sitter_talon/internal/: __init__.py  core.py  dynamic.pyi  match.py  node_types.py  parsec.py
