[build-system]
requires = ["setuptools", "poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tree_sitter_talon"
version = "1006.3.2.0"
description = "Parser for Talon files in Python."
license = "MIT"
authors = ["Wen Kokke <wenkokke@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/wenkokke/py-tree-sitter-talon"
documentation = "https://wenkokke.github.io/py-tree-sitter-talon/"
keywords = ["parser", "tree-sitter", "talon"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
]
include = [
  # Build script must be included in the sdist
  { path = "build.py", format = "sdist" },
  # C extensions must be included in the wheel
  { path = "tree_sitter_talon/internal/*.so", format = "wheel" },
  { path = "tree_sitter_talon/internal/*.pyd", format = "wheel" },
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.7.1"
tree-sitter = "^0.20.0"
tree-sitter-type-provider = "^2.1.18"
dataclasses-json = "^0.5.7"
bumpver = { version = "*", optional = true }
mypy = { version = "^1.1.1", optional = true }
pytest = { version = "^7.1.2", optional = true }
pytest-golden = { version = "^0.2.2", optional = true }
parsec = ">=3.15"
# Prevent Poetry 1.3 from removing setuptools
setuptools = "<67.6.0" # for 'pkg_resources'

[tool.poetry.extras]
test = ["bumpver", "mypy", "pytest", "pytest-golden"]

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"
sphinx-bootstrap-theme = "^0.8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
tox = ">=4.4.6,<5.0.0"
black = "^22.8.0"
isort = "^5.10.1"
bumpver = "*"

[tool.cibuildwheel]
build-frontend = "build"
before-build = "python build.py"

test-extras = ["test"]
test-command = "pytest {project}/tests"
test-skip = "*-macosx_{arm64}"

manylinux-x86_64-image = "manylinux_2_24"
manylinux-i686-image = "manylinux_2_24"
manylinux-aarch64-image = "manylinux_2_24"
manylinux-ppc64le-image = "manylinux_2_24"
manylinux-s390x-image = "manylinux_2_24"
manylinux-pypy_x86_64-image = "manylinux_2_24"
manylinux-pypy_i686-image = "manylinux_2_24"
manylinux-pypy_aarch64-image = "manylinux_2_24"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:"]
addopts = "--ignore=tests/data"
testpaths = ["tests"]

[tool.mypy]
python_version = 3.7
implicit_reexport = false
ignore_missing_imports = true
warn_incomplete_stub = false
warn_no_return = true

[tool.bumpver]
current_version = "1006"
version_pattern = "BUILD"
commit_message = "Bump build number {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  '^version = "{version}.3.2.0"$',
  '^current_version = "{version}"$',
]
"tree_sitter_talon/internal/__init__.py" = [
  '^__version__: str = "{version}.3.2.0"$'
]
"docs/conf.py" = ['^release = "{version}.3.2.0"$']

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py38, py39, py310, py311
isolated_build = true
skip_missing_interpreters = true

[testenv]
extras =
  test
commands_pre =
  {envpython} build.py
commands =
  {envpython} -m bumpver update --dry --no-fetch
  {envpython} -m pytest tests -x
  {envpython} -m mypy.stubtest --mypy-config-file=pyproject.toml --ignore-unused-allowlist --allowlist=.stubtest-allowlist.{envname}.csv tree_sitter_talon
"""
